--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Fishing-Master</string>
-    <string name="splash_title">Sea Fishing</string>
+    <string name="app_name">Fresh Fins</string>
+    <string name="splash_title">Fresh Fins</string>
     <string name="splash_txt">Lorem ipsum dolor amet</string>
     <string name="share">Share</string>
     <string name="about">About Us</string>
